--- a/MdVentas/Reportes/RPT_DetallesVentas.rdlc
+++ b/MdVentas/Reportes/RPT_DetallesVentas.rdlc
@@ -409,9 +409,27 @@
               </Border>
             </Style>
           </Tablix>
+          <Image Name="Image">
+            <Source>Database</Source>
+            <Value>=First(Fields!Logo.Value, "DS_DatosGeneralesVenta")</Value>
+            <MIMEType>image/jpeg</MIMEType>
+            <Sizing>FitProportional</Sizing>
+            <Top>0.09245in</Top>
+            <Left>2.48247in</Left>
+            <Height>0.57292in</Height>
+            <Width>0.73646in</Width>
+            <ZIndex>5</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+            </Style>
+          </Image>
         </ReportItems>
         <KeepTogether>true</KeepTogether>
-        <Height>3.09646cm</Height>
+        <Top>0.65865cm</Top>
+        <Left>1.02707cm</Left>
+        <Height>3.33057cm</Height>
         <Width>18.96713cm</Width>
         <Style>
           <Border>
@@ -811,7 +829,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DS_DetalleVenta</DataSetName>
-        <Top>4.96146cm</Top>
+        <Top>5.62011cm</Top>
+        <Left>1.02707cm</Left>
         <Height>1.12944cm</Height>
         <Width>18.96712cm</Width>
         <ZIndex>1</ZIndex>
@@ -959,7 +978,8 @@
           </Tablix>
         </ReportItems>
         <KeepTogether>true</KeepTogether>
-        <Top>3.16701cm</Top>
+        <Top>3.82566cm</Top>
+        <Left>1.02707cm</Left>
         <Height>1.72389cm</Height>
         <Width>18.96712cm</Width>
         <ZIndex>2</ZIndex>
@@ -1238,8 +1258,8 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DS_DatosGeneralesVenta</DataSetName>
-        <Top>6.16146cm</Top>
-        <Left>9.48356cm</Left>
+        <Top>6.82011cm</Top>
+        <Left>10.51062cm</Left>
         <Height>1.24704cm</Height>
         <Width>9.48356cm</Width>
         <ZIndex>3</ZIndex>
@@ -1270,7 +1290,8 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox111</rd:DefaultName>
-        <Top>21.07743cm</Top>
+        <Top>21.55265cm</Top>
+        <Left>1.02707cm</Left>
         <Height>0.6cm</Height>
         <Width>8.83236cm</Width>
         <ZIndex>4</ZIndex>
@@ -1285,21 +1306,21 @@
         </Style>
       </Textbox>
     </ReportItems>
-    <Height>8.63925in</Height>
+    <Height>23.13376cm</Height>
     <Style>
       <Border>
         <Style>None</Style>
       </Border>
     </Style>
   </Body>
-  <Width>7.75225in</Width>
+  <Width>20.53739cm</Width>
   <Page>
     <PageHeight>29.7cm</PageHeight>
-    <PageWidth>21cm</PageWidth>
-    <LeftMargin>1cm</LeftMargin>
-    <RightMargin>1cm</RightMargin>
-    <TopMargin>1cm</TopMargin>
-    <BottomMargin>1cm</BottomMargin>
+    <PageWidth>22.3cm</PageWidth>
+    <LeftMargin>0.5cm</LeftMargin>
+    <RightMargin>0.5cm</RightMargin>
+    <TopMargin>0.5cm</TopMargin>
+    <BottomMargin>0.5cm</BottomMargin>
     <ColumnSpacing>0.13cm</ColumnSpacing>
     <Style />
   </Page>
@@ -1447,6 +1468,7 @@
       </rd:DataSetInfo>
     </DataSet>
   </DataSets>
+  <ConsumeContainerWhitespace>true</ConsumeContainerWhitespace>
   <rd:ReportUnitType>Cm</rd:ReportUnitType>
   <rd:ReportID>4230ad52-080d-4232-b5cf-91d63668ec11</rd:ReportID>
 </Report>
